--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,1 +1,6 @@
-<p>footer works!</p>
+<div class="footer">
+    <p>© 2020 The ChottiMotti Group. All Rights Reserved.</p>
+    <div class="logo-container">
+        <img src="../../../assets/images/flight.png" alt="logo" class="flight-logo" />
+    </div>
+</div>
