--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,19 +1,25 @@
 <header class="nav-container">
     <div class="navbar">
         <div class="logo-container">
-            <img src="../../../assets/images/flight.png" alt="logo" class="flight-logo" />
-            <span class="flight-logo-text">Chotti Motti Airlines</span>
+            <img src="../../../assets/images/flight.png" alt="logo" class="flight-logo"
+                (click)="handleNavigation('')" />
+            <span class="flight-logo-text" (click)="handleNavigation('')">ChottiMotti Airlines</span>
         </div>
         <nav class="nav-links-container">
-            <a [ngClass]="activeLink === '' ? 'active-link' : 'links'" (click)="handleNavigation('')">Home
-                <span [ngClass]="activeLink === '' ? 'active-bar' : ''"></span>
+            <a [ngClass]="activeLink === '/' ? 'active-link' : 'links'" (click)="handleNavigation('')">Home
+                <span [ngClass]="activeLink === '/' ? 'active-bar' : ''"></span>
             </a>
-            <a [ngClass]="activeLink === 'flights' ? 'active-link' : 'links'" routerLink="/flights"
+            <a [ngClass]="activeLink === '/flights' ? 'active-link' : 'links'"
                 (click)="handleNavigation('flights')">Flights
-                <span [ngClass]="activeLink === 'flights' ? 'active-bar' : ''"></span>
+                <span [ngClass]="activeLink === '/flights' ? 'active-bar' : ''"></span>
             </a>
-            <a [ngClass]="activeLink === 'about' ? 'active-link' : 'links'" (click)="handleNavigation('about')">About
-                <span [ngClass]="activeLink === 'about' ? 'active-bar' : ''"></span>
+            <a [ngClass]="activeLink === '/about' ? 'active-link' : 'links'" (click)="handleNavigation('about')">About
+                <span [ngClass]="activeLink === '/about' ? 'active-bar' : ''"></span>
+            </a>
+
+            <a *ngIf="flag === ''" [ngClass]="activeLink === '/login' ? 'active-link' : 'links'"
+                (click)="handleNavigation('login')">Login
+                <span [ngClass]="activeLink === '/login' ? 'active-bar' : ''"></span>
             </a>
         </nav>
     </div>
