--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,7 +8,7 @@
   
     .footer-wrapper {
       width: 100%;
-      position: absolute;
+      position: fixed;
       bottom: 0;
       left: 0;
     }
