--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,164 @@
-/* You can add global styles to this file, and also import other style files */
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import url('https://fonts.googleapis.com/css?family=Rubik|Orbitron|Montserrat|Questrial');
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.float-left {
+  float: left;
+}
+
+.float-right {
+  float: right;
+}
+
+.p25 {
+  padding: 25px;
+}
+
+.box-shadow {
+  box-shadow: 0 0 5px 2 #333;
+}
+
+.btn-block {
+  width: 100%;
+  margin: 5px 0 !important;
+  cursor: pointer;
+}
+
+body {
+  margin: 0px;
+  font-family: 'Montserrat';
+}
+.black-snackbar {
+  background: #333;
+  box-shadow: 0 0 5px 2px #f40e21;
+  overflow-wrap: break-word;
+}
+
+h1{
+  font-family: 'Orbitron', sans-serif;
+}
+
+.container {
+  font-family: Helvetica;
+}
+
+.loader {
+height: 20px;
+width: 250px;
+position: fixed;
+top: 0;
+bottom: 0;
+left: 0;
+right: 0;
+margin: auto;
+z-index: 1;
+}
+
+.loader--dot {
+animation-name: loader;
+animation-timing-function: ease-in-out;
+animation-duration: 3s;
+animation-iteration-count: infinite;
+height: 20px;
+width: 20px;
+border-radius: 100%;
+background-color: black;
+position: absolute;
+border: 2px solid white;
+}
+
+.loader--dot:first-child {
+background-color: #8cc759;
+animation-delay: 0.5s;
+}
+
+.loader--dot:nth-child(2) {
+background-color: #8c6daf;
+animation-delay: 0.4s;
+}
+
+.loader--dot:nth-child(3) {
+background-color: #ef5d74;
+animation-delay: 0.3s;
+}
+
+.loader--dot:nth-child(4) {
+background-color: #f9a74b;
+animation-delay: 0.2s;
+}
+
+.loader--dot:nth-child(5) {
+background-color: #60beeb;
+animation-delay: 0.1s;
+}
+
+.loader--dot:nth-child(6) {
+background-color: #fbef5a;
+animation-delay: 0s;
+}
+
+.loader--text {
+position: absolute;
+top: 200%;
+left: 0;
+right: 0;
+width: 4rem;
+margin: auto;
+}
+
+.loader--text:after {
+content: "Loading";
+font-weight: bold;
+animation-name: loading-text;
+animation-duration: 3s;
+animation-iteration-count: infinite;
+}
+
+@keyframes loader {
+15% {
+  transform: translateX(0);
+}
+
+45% {
+  transform: translateX(230px);
+}
+
+65% {
+  transform: translateX(230px);
+}
+
+95% {
+  transform: translateX(0);
+}
+}
+
+@keyframes loading-text {
+0% {
+  content: "Loading";
+}
+
+25% {
+  content: "Loading.";
+}
+
+50% {
+  content: "Loading..";
+}
+
+75% {
+  content: "Loading...";
+}
+}
+
+.overlay {
+  padding-top: 80px;
+  background-color: #efefef;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+  top: 0px;
+  left: 0px;
+  opacity: .6;
+  pointer-events: none;
+  cursor: default;
+}
