--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -4,6 +4,6 @@
     <span class="example-fill-remaining-space"></span>
 
     <span>
-        <a mat-menu-item [routerLink]="['login']">LOGIN</a>
+        <a mat-menu-item [routerLink]="['signin']">LOGIN</a>
     </span>
 </mat-toolbar>
