--- a/src/app/admin/home-admin/home-admin.component.html
+++ b/src/app/admin/home-admin/home-admin.component.html
@@ -44,7 +44,7 @@
 
     </mat-tab>
     <mat-tab label="Manage Ancillary Services ">
-        <button mat-raised-button color="primary" (click)="onAddServices()">
+        <button class="btn" mat-raised-button color="primary" (click)="onAddServices()">
             <mat-icon>add</mat-icon>Add Services
         </button>
         <div class="tableDiv">
@@ -71,7 +71,7 @@
     </mat-tab>
 
     <mat-tab label="Manage Meals ">
-        <button mat-raised-button color="primary" (click)="onAddMeals()">
+        <button class="btn" mat-raised-button color="primary" (click)="onAddMeals()">
             <mat-icon>add</mat-icon>Add Meals
         </button>
         <div class="tableDiv">
@@ -98,7 +98,7 @@
     </mat-tab>
 
     <mat-tab label="Manage Shopping Items ">
-        <button mat-raised-button color="primary" (click)="onAddShoppingItem()">
+        <button class="btn" mat-raised-button color="primary" (click)="onAddShoppingItem()">
             <mat-icon>add</mat-icon>Add Shopping Item
         </button>
         <div class="tableDiv">
