some styling added

--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -32,6 +32,7 @@ $link-hover-color: red;
         height: 34px;
         width: 34px;
         display: flex;
+        box-shadow: -5px -5px 15px #FF0000, 5px 5px 15px #707070;
       }
     }
 
